--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
     "axios": "^0.18.0",
     "vant": "^1.1.0",
     "vue": "^2.5.2",
