--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "koa": "^2.5.1",
+    "bcrypt": "^3.0.0",
+    "glob": "^7.1.2",
+    "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
+    "mongoose": "^5.2.6",
     "vant": "^1.0.7",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
